--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-#info {
-	display: none;
-}
-
 body {
 	font-family: 'Indie Flower', cursive;
 	margin: 0;
@@ -22,14 +18,12 @@ h1 {
 	justify-content: center;
 	text-align: center;
 	text-shadow: yellow 0 0 10px;
-	/*-webkit-text-stroke: yellow 0.5px;*/
 	font-size: 350%;
 	white-space: nowrap;
 	font-weight: 600;
 }
 
 li {
-
 	list-style-type: none;
 	white-space: nowrap;
 	color: white;
@@ -38,7 +32,7 @@ li {
 	-webkit-text-stroke: black 0.5px;
 }
 
-#foo {
+#hero {
 	display: flex;
 	width: 250px;
 	height: 250px;
@@ -67,9 +61,11 @@ ul#heroList li:hover {
 	cursor: pointer;
 }
 
-
 #info {
+	display: none;
 	display: flex;
+	align-items: center;
+	justify-content: center;
 	position: fixed;
 	top: 18%;
 	left: 70%;
@@ -79,16 +75,6 @@ ul#heroList li:hover {
 	position: fixed;
 	bottom: 5%;
 	left: 44%;
-}
-
-
-footer {
-	position: absolute;
-	text-align: left;
-	padding: 15px;
-	font-size: 80%;
-	bottom: 1%;
-	right: 4%;
 }
 
 #next {
@@ -114,20 +100,33 @@ input {
 	-webkit-animation: pulsate 1.2s linear infinite;
 	animation: pulsate 1.2s linear infinite;
 }
+
 input:hover {
 	-webkit-animation-play-state: paused;
 	animation-play-state: paused;
 	cursor: pointer;
 }
+
 input:active {
 	top: 1px;
 	color: #fff;
 	text-shadow: 0 -1px rgba(0,0,0,.3), 0 0 5px #ffd, 0 0 8px #fff;
 	box-shadow: 0 -1px 3px rgba(0,0,0,.3), 0 1px 1px #fff, inset 0 1px 2px rgba(0,0,0,.8), inset 0 -1px 0 rgba(0,0,0,.05);
 }
+
 @-webkit-keyframes pulsate {
 	50% {color: #fff; text-shadow: 0 -1px rgba(0,0,0,.3), 0 0 5px #ffd, 0 0 8px #fff;}
 }
+
 @keyframes pulsate {
 	50% {color: #fff; text-shadow: 0 -1px rgba(0,0,0,.3), 0 0 5px #ffd, 0 0 8px #fff;}
+}
+
+#close {
+	display: none;
+	left: 68%;
+	top: -2%;
+	box-shadow: none;
+	background: 0;
+	font-size: 30px;
 }
